# belllabs-research-ingestion-evaluation-content-services

./: .env.example  .gitignore  AGENTS.md  README.md  docker-compose.yml  pyproject.toml
.agents/error-solutions/: temporal-auto-setup-manifest.yaml  temporal-postgres-port-bind.yaml
.claude/error-solutions/: openai-agents-usage-schema.yaml  python-inline-async-def.yaml  temporal-max-turns-workflow-task.yaml  temporal-sandbox-provider-import.yaml
.cursor/: Dockerfile  environment.json
.cursor/rules/: engineering-sequence.mdc  graphify.mdc  project-organization.mdc  tech-stack-authority.mdc
.cursor/scripts/: cloud-install.sh  cloud-start.sh
.scratch/: ISSUE_BRANCH_PR_LIFECYCLE.md  cursor-rules-proposal-2026-07-20.md
app/: __init__.py  config.py  preflight.py  server.py
app/api/: control_plane.py  run_control.py
scripts/: socketio_smoke.py
tests/: conftest.py  test_agents_compatibility.py  test_artifact_promotion.py  test_artifact_promotion_mongodb_integration.py  test_artifact_promotion_postgres_integration.py  test_config.py  test_control_plane.py  test_control_plane_mongodb_integration.py  test_generic_artifact_workflow.py  test_linked_runs.py  test_openai_agents_runtime.py  test_operation_delegation.py  test_operation_execution.py  test_operation_execution_mongodb_integration.py  test_operation_submission_api.py  test_run_control.py  test_run_control_postgres_integration.py  test_sandbox_snapshots.py  test_sandbox_snapshots_mongodb_integration.py  test_server.py  test_stagegraph_orchestration.py  test_workspace_candidates.py  test_workspace_materialization.py  test_workspace_materialization_mongodb_integration.py
(+118 files in other folders)
