[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "biotech-research-ingestion-evaluation-system"
version = "0.1.0"
description = "Pre-emptive async infrastructure for biotech research ingestion and evaluation."
requires-python = ">=3.12"
dependencies = [
  "aioboto3>=15,<16",
  "asyncpg>=0.30,<1",
  "beanie>=2,<3",
  "docker>=7,<8",
  "fastapi>=0.116,<1",
  "neo4j>=5.28,<7",
  # openai 2.46 added a required usage field before openai-agents 0.17.8 adapted.
  "openai>=2.36,<2.45",
  "openai-agents>=0.17.8,<0.18",
  "opentelemetry-api>=1.37,<2",
  "opentelemetry-sdk>=1.37,<2",
  "pydantic-settings>=2.10,<3",
  "pymongo>=4.11,<5",
  "python-socketio>=5.13,<6",
  "redis>=6,<7",
  "supabase>=2.18,<3",
  "temporalio[openai-agents,opentelemetry]>=1.30,<2",
  "uvicorn[standard]>=0.35,<1",
]

[dependency-groups]
dev = [
  "httpx>=0.28,<1",
  "jsonschema>=4.26.0",
  "mypy>=1.17,<2",
  "pytest>=8.4,<9",
  "pytest-asyncio>=1.1,<2",
  "ruff>=0.12,<1",
]

[tool.uv]
package = true

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "ASYNC"]

[tool.mypy]
python_version = "3.12"
plugins = ["pydantic.mypy"]
check_untyped_defs = true
no_implicit_optional = true
warn_unused_ignores = true
disable_error_code = ["import-untyped"]

[[tool.mypy.overrides]]
module = "app.integrations.temporal"
disable_error_code = ["arg-type"]
